Fix spacing on all pages

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 /* Home page - reduce gap between navbar and title */
 body {
-  padding-top: 60px !important;
+  padding-top: 50px !important;
 }
 
 #header {
-  margin-top: -10px !important;
+  margin-top: -15px !important;
   padding-top: 0px !important;
 }
 
@@ -17,13 +17,4 @@ body {
 .title.toc-ignore {
   margin-top: 0px !important;
   padding-top: 0px !important;
-}
-
-/* Other pages - ensure content is not cut off */
-.section h2:first-of-type {
-  padding-top: 20px !important;
-}
-
-h2, h3, h4 {
-  margin-top: 20px !important;
 }
